# corely-serve

./: .gitignore  ABAC.yaml  PRODUCT_ROADMAP.md  backend_architecture_report.md  base.py  pyproject.toml  run.py  run_base.py
_app/: _app.py
_app/_core/: __init__.py
_app/_models/: base.py  category.py  customer.py  employee.py  info.py  inventory.py  organization.py  product.py  sale.py  store 2.py  store.py  supplier.py  tax.py  user.py
_app/_schemas/: customer_schema.py  employee_schema.py  inventory_schema.py  invitation_schema.py  onboarding_schema.py  organization_schema.py  product_schema.py  sale_schema.py  store_schema 2.py  store_schema.py  user_schema.py
_app/_services/: Untitled-1.json  auth_service.py  base_service.py  customer_service.py  email_service.py  employee_service.py  info_service.py  inventory_service.py  invoice_service.py  organization_service.py  report_service.py  sales_service.py  store_service.py
_app/api copy/: employees.py  info.py  inventory.py  onboarding.py  organizations.py  products.py  reports.py  sales.py  stores.py  users.py
app/: app.py
app/api/: example_endpoints.py
app/model/: config_model.py  user_model.py
app/schema/: auth_schema.py  common_schema.py  customer_schema.py  organisation_model.py  pos_schema.py  producy_schema.py  user_schema.py
app/service/: auth_service.py  config_service.py  customer_service.py  organization_service.py  product_service.py  user_service.py
app/utils/: exceptions.py  helpers.py  logger.py
base/: app.py
base/audit/: routes.py  schemas.py  service.py
base/auth/: helpers.py  (+3 more)
(+125 files in other folders)
