[project]
name = "lhs-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "dotenv>=0.9.9",
    "bleach>=6.2.0",
    "uuid>=1.30",
]
