[project]
name = "corely-backend"
version = "0.1.0"
description = "Corely — Multi-tenant enterprise backend for construction & hardware businesses. Modules: Auth, RBAC, Items, Inventory, POS, Invoicing, Customers, Vendors, Reports, Stores, Audit Logs."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "motor>=3.6.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
]
